# EzExpr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  EzExpr.hpp  LICENSE  README.md
.github/workflows/: Leak.yml  Linux_Clang.yml  Linux_Gcc.yml  Osx_Clang.yml  Osx_Gcc.yml  Win_Msvc.yml
cmake/: 3rdparty.cmake  glad.cmake  glfw.cmake  imguipack.cmake
src/: main.cpp
src/core/: EzExprManager.cpp  EzExprManager.h
src/panes/: ChartPane.cpp  ChartPane.h  ExprPane.cpp  ExprPane.h
tests/: .clang-format  CMakeLists.txt  main.cpp
tests/EzExpr/: Test_Expr.cpp  Test_Expr.h
tests/EzExpr/builtins/: Test_Expr_Builtins.cpp  Test_Expr_Builtins.h
tests/EzExpr/constants/: Test_Expr_Constants.cpp  Test_Expr_Constants.h
tests/EzExpr/exceptions/: Test_Expr_Exceptions.cpp  Test_Expr_Exceptions.h
tests/EzExpr/parsings/: Test_Expr_Parsings.cpp  Test_Expr_Parsings.h
tests/EzExpr/perfos/: Test_Expr_Perfos.cpp  Test_Expr_Perfos.h
