cmake_minimum_required(VERSION 3.1)

set(PROJECT EzExpr_Test)
enable_language(C CXX)
project(${PROJECT} CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Z")
endif ()

file(GLOB_RECURSE PROJECT_TEST_SRC_RECURSE 
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/*.h 
)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${PROJECT_TEST_SRC_RECURSE})

add_executable(${PROJECT} ${PROJECT_TEST_SRC_RECURSE})

set_target_properties(${PROJECT} PROPERTIES FOLDER Tests)

#############################################################
#############################################################
#############################################################

target_include_directories(${PROJECT} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

add_definitions(-DTEST_SAMPLES_PATH="${CMAKE_SOURCE_DIR}/test_samples/")

function(SetTest arg)
	add_test("${arg}" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "${arg}")
endfunction()

##########################################################
## PARSING ###############################################
##########################################################

SetTest(Test_Expr_Parsing_OperatorWithoutOperands)
SetTest(Test_Expr_Parsing_UnaryOperatorWithoutOperand)
SetTest(Test_Expr_Parsing_UnmatchedOpeningParenthesis)
SetTest(Test_Expr_Parsing_UnmatchedClosingParenthesis)
SetTest(Test_Expr_Parsing_DoubleBinaryOperator)
SetTest(Test_Expr_Parsing_DoubleUnaryOperator)
SetTest(Test_Expr_Parsing_UndefinedVariable)
SetTest(Test_Expr_Parsing_BinaryOperatorWithoutRightOperand)
SetTest(Test_Expr_Parsing_DoubleOperandWithoutOperator)
SetTest(Test_Expr_Parsing_FunctionWithoutParentheses)
SetTest(Test_Expr_Parsing_FunctionWithoutArguments)
SetTest(Test_Expr_Parsing_FunctionWithTooManyArguments)
SetTest(Test_Expr_Parsing_FunctionWithOneArgumentInsteadOfTwo)
SetTest(Test_Expr_Parsing_DivisionByZero)
SetTest(Test_Expr_Parsing_MisplacedComma)
SetTest(Test_Expr_Parsing_UndefinedOperator)
SetTest(Test_Expr_Parsing_MisuseOfFactorialOperator)
SetTest(Test_Expr_Parsing_UnaryOperatorBeforeParenthesis)
SetTest(Test_Expr_Parsing_EmptyParenthesis)
SetTest(Test_Expr_Parsing_DoubleComma)
SetTest(Test_Expr_Parsing_DoubleBinaryOperatorAtStart)
SetTest(Test_Expr_Parsing_DoubleBinaryOperatorAtEnd)
SetTest(Test_Expr_Parsing_EmptyExpression)
SetTest(Test_Expr_Parsing_UnknownFunctionName)
SetTest(Test_Expr_Parsing_MissingParenthesisInComplexExpression)
SetTest(Test_Expr_Parsing_OperatorWithoutOperandsInParenthesis)
SetTest(Test_Expr_Parsing_NumberFollowedByVariable)
SetTest(Test_Expr_Parsing_IncorrectUseOfComma)
SetTest(Test_Expr_Parsing_UnrecognizedCharacter)
SetTest(Test_Expr_Parsing_OperatorAtEndOfParenthesis)
SetTest(Test_Expr_Parsing_NumberFollowedByParenthesisWithoutOperator)
SetTest(Test_Expr_Parsing_VariableFollowedByExpressionWithoutOperator)
SetTest(Test_Expr_Parsing_MisplacedCommaAfterFunction)
SetTest(Test_Expr_Parsing_BinaryOperatorMisplacedInFunction)
SetTest(Test_Expr_Parsing_IncompleteExpression)
SetTest(Test_Expr_Parsing_MisuseOfFactorialOperator_2)
SetTest(Test_Expr_Parsing_NumberFollowedByBinaryOperator)
SetTest(Test_Expr_Parsing_IncorrectUseOfOpeningParenthesis)
SetTest(Test_Expr_Parsing_IncorrectVariableName)
SetTest(Test_Expr_Parsing_IncorrectUseOfMultipleOperators)

##########################################################
## CONSTANTS #############################################
##########################################################

SetTest(Test_Expr_Constant_Parsing_PI)
SetTest(Test_Expr_Constant_Parsing_E)

##########################################################
## BUILTINS ##############################################
##########################################################

SetTest(Test_Expr_Builtin_Floor_1)
SetTest(Test_Expr_Builtin_Floor_2)
SetTest(Test_Expr_Builtin_Floor_3)
SetTest(Test_Expr_Builtin_Ceil_1)
SetTest(Test_Expr_Builtin_Ceil_2)
SetTest(Test_Expr_Builtin_Ceil_3)
SetTest(Test_Expr_Builtin_Round_1)
SetTest(Test_Expr_Builtin_Round_2)
SetTest(Test_Expr_Builtin_Round_3)
SetTest(Test_Expr_Builtin_Fract_1)
SetTest(Test_Expr_Builtin_Fract_2)
SetTest(Test_Expr_Builtin_Fract_3)
SetTest(Test_Expr_Builtin_Sign_1)
SetTest(Test_Expr_Builtin_Sign_2)
SetTest(Test_Expr_Builtin_Sign_3)
SetTest(Test_Expr_Builtin_Step_1)
SetTest(Test_Expr_Builtin_Step_2)
SetTest(Test_Expr_Builtin_Step_3)
SetTest(Test_Expr_Builtin_Hypot_1)
SetTest(Test_Expr_Builtin_Hypot_2)
SetTest(Test_Expr_Builtin_Hypot_3)
SetTest(Test_Expr_Builtin_Clamp_1)
SetTest(Test_Expr_Builtin_Clamp_2)
SetTest(Test_Expr_Builtin_Clamp_3)
SetTest(Test_Expr_Builtin_Saturate_1)
SetTest(Test_Expr_Builtin_Saturate_2)
SetTest(Test_Expr_Builtin_Saturate_3)
SetTest(Test_Expr_Builtin_Lerp_1)
SetTest(Test_Expr_Builtin_Lerp_2)
SetTest(Test_Expr_Builtin_Lerp_3)
SetTest(Test_Expr_Builtin_Mix_1)
SetTest(Test_Expr_Builtin_Mix_2)
SetTest(Test_Expr_Builtin_Mix_3)
SetTest(Test_Expr_Builtin_SmoothStep_1)
SetTest(Test_Expr_Builtin_SmoothStep_2)
SetTest(Test_Expr_Builtin_SmoothStep_3)
SetTest(Test_Expr_Builtin_SmoothAbs_1)
SetTest(Test_Expr_Builtin_SmoothAbs_2)
SetTest(Test_Expr_Builtin_SmoothAbs_3)
SetTest(Test_Expr_Builtin_Abs_1)
SetTest(Test_Expr_Builtin_Abs_2)
SetTest(Test_Expr_Builtin_Abs_3)
SetTest(Test_Expr_Builtin_Sin_1)
SetTest(Test_Expr_Builtin_Sin_2)
SetTest(Test_Expr_Builtin_Sin_3)
SetTest(Test_Expr_Builtin_Cos_1)
SetTest(Test_Expr_Builtin_Cos_2)
SetTest(Test_Expr_Builtin_Cos_3)
SetTest(Test_Expr_Builtin_Tan_1)
SetTest(Test_Expr_Builtin_Tan_2)
SetTest(Test_Expr_Builtin_Tan_3)
SetTest(Test_Expr_Builtin_Asin_1)
SetTest(Test_Expr_Builtin_Asin_2)
SetTest(Test_Expr_Builtin_Asin_3)
SetTest(Test_Expr_Builtin_Acos_1)
SetTest(Test_Expr_Builtin_Acos_2)
SetTest(Test_Expr_Builtin_Acos_3)
SetTest(Test_Expr_Builtin_Atan_1)
SetTest(Test_Expr_Builtin_Atan_2)
SetTest(Test_Expr_Builtin_Atan_3)
SetTest(Test_Expr_Builtin_Sinh_1)
SetTest(Test_Expr_Builtin_Sinh_2)
SetTest(Test_Expr_Builtin_Sinh_3)
SetTest(Test_Expr_Builtin_Cosh_1)
SetTest(Test_Expr_Builtin_Cosh_2)
SetTest(Test_Expr_Builtin_Cosh_3)
SetTest(Test_Expr_Builtin_Tanh_1)
SetTest(Test_Expr_Builtin_Tanh_2)
SetTest(Test_Expr_Builtin_Tanh_3)
SetTest(Test_Expr_Builtin_Asinh_1)
SetTest(Test_Expr_Builtin_Asinh_2)
SetTest(Test_Expr_Builtin_Asinh_3)
SetTest(Test_Expr_Builtin_Acosh_1)
SetTest(Test_Expr_Builtin_Acosh_2)
SetTest(Test_Expr_Builtin_Acosh_3)
SetTest(Test_Expr_Builtin_Atanh_1)
SetTest(Test_Expr_Builtin_Atanh_2)
SetTest(Test_Expr_Builtin_Atanh_3)
SetTest(Test_Expr_Builtin_Ln_1)
SetTest(Test_Expr_Builtin_Ln_2)
SetTest(Test_Expr_Builtin_Ln_3)
SetTest(Test_Expr_Builtin_Log_1)
SetTest(Test_Expr_Builtin_Log_2)
SetTest(Test_Expr_Builtin_Log_3)
SetTest(Test_Expr_Builtin_Log1p_1)
SetTest(Test_Expr_Builtin_Log1p_2)
SetTest(Test_Expr_Builtin_Log1p_3)
SetTest(Test_Expr_Builtin_Log2_1)
SetTest(Test_Expr_Builtin_Log2_2)
SetTest(Test_Expr_Builtin_Log2_3)
SetTest(Test_Expr_Builtin_Log10_1)
SetTest(Test_Expr_Builtin_Log10_2)
SetTest(Test_Expr_Builtin_Log10_3)
SetTest(Test_Expr_Builtin_Exp_1)
SetTest(Test_Expr_Builtin_Exp_2)
SetTest(Test_Expr_Builtin_Exp_3)
SetTest(Test_Expr_Builtin_Sqrt_1)
SetTest(Test_Expr_Builtin_Sqrt_2)
SetTest(Test_Expr_Builtin_Sqrt_3)
SetTest(Test_Expr_Builtin_Mod_1)
SetTest(Test_Expr_Builtin_Mod_2)
SetTest(Test_Expr_Builtin_Mod_3)
SetTest(Test_Expr_Builtin_Atan2_1)
SetTest(Test_Expr_Builtin_Atan2_2)
SetTest(Test_Expr_Builtin_Atan2_3)
SetTest(Test_Expr_Builtin_Min_1)
SetTest(Test_Expr_Builtin_Min_2)
SetTest(Test_Expr_Builtin_Min_3)
SetTest(Test_Expr_Builtin_Max_1)
SetTest(Test_Expr_Builtin_Max_2)
SetTest(Test_Expr_Builtin_Max_3)
SetTest(Test_Expr_Builtin_Factorial_1)
SetTest(Test_Expr_Builtin_Factorial_2)
SetTest(Test_Expr_Builtin_Factorial_3)
SetTest(Test_Expr_Builtin_ModuloPercent_1)
SetTest(Test_Expr_Builtin_ModuloPercent_2)
SetTest(Test_Expr_Builtin_ModuloPercent_3)
SetTest(Test_Expr_Builtin_ModuloMod_1)
SetTest(Test_Expr_Builtin_ModuloMod_2)
SetTest(Test_Expr_Builtin_ModuloMod_3)

##########################################################
## ERROR CODES ###########################################
##########################################################

SetTest(Test_Expr_Exception_DivisionByZero)
SetTest(Test_Expr_Exception_DivisionByZero_Float)
SetTest(Test_Expr_Exception_ModuloByZero)
SetTest(Test_Expr_Exception_UnmatchedParenthesis_Open)
SetTest(Test_Expr_Exception_UnmatchedParenthesis_Close)
SetTest(Test_Expr_Exception_VariableNotFound)
SetTest(Test_Expr_Exception_VariableNotFound_Multiple)
SetTest(Test_Expr_Exception_FunctionNotFound)
SetTest(Test_Expr_Exception_FunctionWrongArgs)
SetTest(Test_Expr_Exception_EvaluationNaN_1)
SetTest(Test_Expr_Exception_EvaluationNaN_2)
SetTest(Test_Expr_Exception_EvaluationNaN_Log)
SetTest(Test_Expr_Exception_EvaluationNaN_DivZeroZero)
SetTest(Test_Expr_Exception_EvaluationInf)
SetTest(Test_Expr_Exception_EvaluationInf_Exp)
SetTest(Test_Expr_Exception_EvaluationInf_Power)
